Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44188

QGraphicsEffect doesn't seem to work for QOpenGLWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0
    • 5.4.0
    • Documentation, GUI: OpenGL
    • None

    Description

      Specifying a graphics effect to a QOpenGLWidget using setGraphicsEffect(QGraphicsEffect *) does not seem to have any effect.

      The same code using a QWidget instead of a QOpenGLWidget does render the graphics effect as expected.

      It would be nice if I could use graphics effects with QOpenGLWidget in the same way that I use them with QWidget. If that is impractical, I suggest adding a note to the QOpenGLWidget or setGraphicsEffect(QGraphicsEffect *) documentation to point out that limitation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            zblair Zachary Blair
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes