Document that setGraphicsEffect is not suitable for GL widgets

Task-number: QTBUG-44188
Change-Id: Ie5bea14ffb804124421e97e5f49975ac9ad6d838
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>